pin highlight solved, date picking only UI made(not linked with data)

--- a/sinkhole-visualization/src/components/SeoulMap.css
+++ b/sinkhole-visualization/src/components/SeoulMap.css
@@ -10,3 +10,7 @@
   padding: 2px 4px;
   white-space: nowrap;
 }
+/* 지도 위에 올리기 위해 z-축 조절 */
+.datepicker-popper {
+  z-index: 1500000 !important;
+}
