--- a/sinkhole-visualization/src/interactions/RangeSlider.css
+++ b/sinkhole-visualization/src/interactions/RangeSlider.css
@@ -8,7 +8,7 @@
   .custom-thumb {
     height: 16px;
     width: 16px;
-    background-color: #2563eb;
+    background-color: #10b981;
     border-radius: 50%;
     cursor: grab;
     top: -4px;
